[package]
name = "valip"
version = "0.1.1"
edition = "2021"
authors = ["Lee Smet <lee.smet@hotmail.com>"]
description = "Parsing of ip addresses from bytes representing strings"
readme = "./README.md"
repository = "https://github.com/LeeSmet/valip"
license = "MIT"
categories = ["no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
